# keyspace

./: API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DOCUMENTATION_INDEX.md  DOWNLOAD.md  Dockerfile  FAQ.md  INSTALL.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  USER_GUIDE.md  benchmark.py  build_packages.sh  docker-compose.yml  main.py  main_old.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.bat  start_gui_with_api.py  start_web.bat  start_with_api.bat  test_imports.py  test_pattern_generation.py  test_wordlist_generator.py  web_app.py
assets/: README.md
backend/: brute_force_thread.py  memory_efficient_reader.py  thread_pool_manager.py
backend/integrations/: __init__.py  api_integration.py  cloud_integration.py  hashcat_integration.py  integration_manager.py  john_integration.py
backend/security/: __init__.py  audit_logger.py  compliance.py  permissions.py  session_encryption.py
benchmark_results/: benchmark_report_20260205_042705.txt  benchmark_report_20260205_161245.txt  benchmark_report_20260205_161253.txt  benchmark_report_20260205_161805.txt  benchmark_report_20260205_162114.txt  benchmark_report_20260205_162432.txt  benchmark_report_20260205_162744.txt  benchmark_report_20260205_163020.txt  benchmark_report_20260205_163407.txt  benchmark_results_20260205_042516.json  benchmark_results_20260205_042705.json  benchmark_results_20260205_161245.json  benchmark_results_20260205_161253.json  benchmark_results_20260205_161804.json  benchmark_results_20260205_162114.json  benchmark_results_20260205_162432.json  benchmark_results_20260205_162744.json  benchmark_results_20260205_163020.json  benchmark_results_20260205_163407.json  test_wordlist_1000.txt  test_wordlist_200.txt  test_wordlist_300.txt  test_wordlist_500.txt
frontend/: __init__.py
frontend/ui/: main_window.py  main_window_old.py
packaging/linux/deb/: build_deb.sh
packaging/linux/deb/debian/: changelog  control  postinst  prerm  rules
packaging/linux/rpm/: bruteforce-tool.spec  build_rpm.sh  keyspace.spec
packaging/macos/: build_dmg.sh
templates/: base.html  index.html  login.html
tests/: test_brute_force_thread.py  test_gui_main_window.py  test_thread_pool_manager.py
