[build-system]
requires = ["setuptools>=67.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bruteforce-tool"
version = "1.0.0"
description = "Advanced password cracking tool with modern GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "BruteForce Tool Team", email = "contact@bruteforce-tool.example.com"}
]
keywords = ["password", "security", "cracking", "brute-force", "dictionary", "attack", "security-testing", "penetration-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
]

[project.urls]
Homepage = "https://github.com/yourusername/bruteforce-tool"
Documentation = "https://github.com/yourusername/bruteforce-tool/blob/main/DOCUMENTATION_INDEX.md"
Repository = "https://github.com/yourusername/bruteforce-tool.git"
"Bug Tracker" = "https://github.com/yourusername/bruteforce-tool/issues"
Changelog = "https://github.com/yourusername/bruteforce-tool/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
bruteforce-tool = "main:main"

[tool.setuptools]
packages = ["backend", "frontend", "backend.security"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yaml", "*.yml", "*.json"]
templates = ["*.html"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.coverage.run]
source = ["backend", "frontend"]
omit = [
    "tests/*",
    "*/tests/*",
    "packaging/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
